--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio Code</title>
+  <title>Kishan </title>
+  <link rel="icon"  type="image" href="k.png">
   <link rel="stylesheet" href="portfolio.css" />
   <script src="portfolio.js"></script>
 </head>
@@ -26,7 +27,7 @@
     <div class="home-content" id="home-page">
       <div class="name">
         <h1>Hi, I'm Kishan Kanth</h1>
-        <p>Web Developer.</p>
+        <p>Web Developer <br>UI/UX Designer</p>
       </div>
       <div class="angle-down-icon">
         <a href="#about"><i class="fas fa-angle-down"></i></a>
@@ -42,9 +43,7 @@
           </div>
           <img src="20200113_155926.jpg" alt="image" />
           <p>
-            I am a CSE student studies at Velammal Institute of Techonology.
-            I really enjoy solving problems as well as making things pretty and easy to use. I can't stop learning new
-            things; the more, the better.
+            I'm currently pursuing a degree in Computer Science Engineering at Velammal Institute of Technology. I have a deep passion for tackling complex problems and have a natural talent for making things visually appealing and user-friendly. The more I learn, the more I realize how fulfilling it is to expand my horizons and explore new concepts and ideas. It's this curiosity and enthusiasm that drive me to excel in my studies and continue seeking opportunities to grow and improve.
           </p>
           <div class="work-arrow">
             <p>
@@ -112,7 +111,7 @@
             <i class="fab fa-css3-alt"></i>
             <i class="fab fa-js"></i>
             <h2>Social Card</h2>
-            <p>Build Using HTML5,CSS3</p>
+            <p>Built Using HTML5,CSS3</p>
             <button><a href="https://github.com/kishan-kanth/Social-Card" target="blank">View source <i
                   class="fas fa-external-link-alt"></i></a>
             </button>
@@ -138,7 +137,7 @@
       <div class="contact-content">
         <h2>Contact Me</h2>
         <p class="mail">
-          Get in touch with me <i class="fas fa-arrow-right"></i> kishankanthds@gmail.com
+          Get in touch with me <i class="fas fa-arrow-right"></i> <a href=mailto:kishankanthds@gmail.com>kishankanthds@gmail.com</a>
         </p>
         <p class="links">Or find me on:</p>
         <a href="https://www.linkedin.com/in/kishan-kanth-679724267/" target="blank"><i class="fab fa-linkedin">
